Fixed word cloud alignment on the word cloud slide.

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -131,7 +131,7 @@
 
   .slide8 .slide-content {
     position: absolute;
-    top: 0;
+    top: 40px;
     left: 0;
     right: 0;
     bottom: 0;
